tests/basic/check/prim/090.pan.out
tests/basic/check/prim/090.pan:2:1-4: error: cannot solve constraints of f90
tests/basic/check/prim/090.pan:5:1-4: error: cannot solve constraints of f91
tests/basic/check/prim/090.pan:8:1-4: error: cannot solve constraints of f92
tests/basic/check/prim/090.pan:11:1-4: error: cannot solve constraints of f93
tests/basic/check/prim/090.pan:14:1-4: error: cannot solve constraints of f94
tests/basic/check/prim/090.pan:17:1-4: error: cannot solve constraints of f95
tests/basic/check/prim/090.pan:20:1-4: error: cannot solve constraints of f96
tests/basic/check/prim/090.pan:23:1-4: error: cannot solve constraints of f97